--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
+@import url(//fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 
 body{
 	color: #2c3e50;
@@ -130,14 +130,14 @@ article{
 article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decoration: none; }
 article img { max-width: 100%; }
 
-h1,h2,h3,h4,h5,h6 { font-family: 'Fira Sans', 'Ubuntu', sans-serif; }
+h1,h2,h3,h4,h5,h6 { font-family: 'Fira Sans', 'Open Sans Condensed', sans-serif; }
 article.home h1,
 article.home h2,
 article.home h3,
 article.home h4,
 article.home h5,
 article.home h6 {
-	font-family: 'Fira Sans', 'Ubuntu', sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 	/*color: #f2756a;*/
 }
 
@@ -161,7 +161,7 @@ article.home h4 a:hover {
 
 footer {
 	padding-top: 15px;
-	font-family: 'Ubuntu';
+	font-family: 'Open Sans Condensed';
 }
 
 /* nav-vertical-tabs component */
