--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ article{
 article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decoration: none; }
 article img { max-width: 100%; }
 
-h1,h2,h3,h4,h5,h6 { font-family: 'Fira Sans', 'Open Sans Condensed', sans-serif; }
+h1,h2,h3,h4,h5,h6 { font-family: 'Open Sans Condensed', sans-serif; }
 article.home h1,
 article.home h2,
 article.home h3,
